--- a/socialprojectfe/src/pages/main/styles.css
+++ b/socialprojectfe/src/pages/main/styles.css
@@ -63,3 +63,16 @@
     opacity: 0.5;
     cursor: default;
 }
+
+
+.project-list button{
+    padding: 10px;
+    border-radius: 5px;
+    border:0;
+    background: #da55aa;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 5px;
+}
